fix: scrollbars in tables

--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -94,6 +94,7 @@
 
     .wide-inner-element {
         max-width: 700px;
+        scrollbar-width: thin;
     }
 }
 
